# PointNet_Master

./: .gitignore  Makefile  README.md  convert_extension.py  datasets.py  k_means.py  loss.py  mesh.py  mesh_02.py  model.py  nn_distance.py  object_id.txt  output_mesh.ply  point_cloud.ply  point_model.py  predict_point_cpu.py  predict_point_gpu.py  predict_point_param.json  predict_point_shapenet.py  pyproject.toml  remake_ply.py  show_ply.py  train.py  train_param.json
create_mesh/: create_point_of_cube.py  information.py  marching_cube.py  mesh.py  zikken.py
enviroment_check/: check_library_version.py  check_tensor_gpu.py  check_torch_gpu.py  hello
ply_data/: cube_mesh.ply  mesh.ply  zikken.ply
predict_points/: e100_p1024_airplane_10th  e100_p1024_airplane_4th  e50_p1024_chair_00png.npy  e50_p2048_airplane2_15png.asc  e50_p2048_airplane2_15png.npy  e50_p2048_airplane2_15png.ply  e50_p2048_airplane_00png.npy  e50_p2048_airplane_01png.asc  e50_p2048_airplane_01png.npy  e50_p2048_airplane_15png.ply  e50_p2048_test_image_airplane.npy  pointcloud_2048_airplane.asc
scripts/: train.sh
surface/: airplanesIm.tar.gz:Zone.Identifier  airplanesPly.tar.gz:Zone.Identifier
surface/airplanesIm/: b1.im
tf_ops/: makefile
trush/: create_point_of_cube.py  information.py  make_surface_backup_1201.py  marching_cube.py  mesh.py  mesh_02.py  show_point.py  vectors_26.py
work/: -fitting.py  fitting.py  image_processing.py  make_surface.py  make_surface_backup.py  make_surface_param.py  npy_to_ply.py  output_mesh.ply  ransac.py  rotate_coordinate.py  vectors_26.py  zikken.py
(+25 files in other folders)
