[tool.poetry]
name = "pointnet-master"
version = "0.1.0"
description = ""
authors = ["kawanoichi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
open3d = "^0.17.0"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.1.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
